--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.2.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1"
   },
